--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 
 # Site Settings
 title: My Resume
-url: 'http://webjeda.com'
-baseurl: '/online-cv' #change it according to your repository name
+url: "https://raschmitt.github.io"
+baseurl: "/online-cv" #change it according to your repository name
 description: A beautiful Jekyll theme for creating resume
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
 theme_skin: blue # blue turquoise green berry orange ceramic
@@ -11,8 +11,6 @@ chrome_mobile_color: #use hex colors (ex:#1976d2) or leave empty if you don't wa
 
 # Tracker
 analytics: UA-83979019-1
-
-
 
 # Sass/SCSS
 sass:
