--- a/_data/data.yml
+++ b/_data/data.yml
@@ -200,4 +200,4 @@ skills:
       level: 60%
 
 footer: >
-  Designed with by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
+  Designed by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
