--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Rogerio Schmitt
 url: "https://raschmitt.github.io"
 baseurl: "/online-cv" #change it according to your repository name
-description: A beautiful Jekyll theme for creating resume
+description: Rogerio Schmmit online CV.
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
 theme_skin: ceramic # blue turquoise green berry orange ceramic
 chrome_mobile_color: #use hex colors (ex:#1976d2) or leave empty if you don't want a color for chrome mobile searchbar
