--- a/_data/data.yml
+++ b/_data/data.yml
@@ -81,7 +81,7 @@ education:
 
 experiences:
   - role: Department of Projects Intern
-    time: JUN 2017 - Present
+    time: JUN 2017 - PRESENT
     company: Construtora Hahne Ltda, Brazil
     details: |
       As an intern at the department of projects of this major Brazilian construction company, I was required to elaborate structural, sanitary and electrical projects based on BIM technology both for the residential and industrial markets.
