--- a/_data/data.yml
+++ b/_data/data.yml
@@ -152,5 +152,10 @@ skills:
     - name: Git
       level: 75%
 
-footer: >
-  Designed by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
+    - name: Bootstrap
+      level: 30%
+
+    - name: jQuery
+    level: 45%
+
+footer:
