--- a/_data/data.yml
+++ b/_data/data.yml
@@ -116,7 +116,7 @@ experiences:
 projects:
   title: Projects
   intro: >
-    "Here are some of the open source projects I have worked on as a developer:"
+    Here are some of the open source projects I have worked on as a developer&#58
 
   assignments:
     - title: publicationReceipt
