Add C# to skills

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -155,6 +155,9 @@ skills:
   title: Skills &amp; Proficiency
 
   toolset:
+    - name: C#
+      level: 75%
+
     - name: Javascript
       level: 75%
 
