--- a/_data/data.yml
+++ b/_data/data.yml
@@ -85,13 +85,13 @@ education:
 experiences:
   - role: Junior C# Developer
     time: SEP 2019 - PRESENT
-    company: '[HBSIS - AMBEV](https://hbsis.com.br/), Brazil'
+    company: HBSIS - AMBEV, Brazil'
     details: |
       Worked as a C# developer for [HBSIS - AMBEV](https://hbsis.com.br/), wich makes part of the largest brewer group in the word, [AB Inbev](https://www.ab-inbev.com/).
 
   - role: Scrum Master - Project Manager
     time: SEP 2019 - PRESENT
-    company: Vincae, Brazil
+    company: '[Vincae](https://vincae.com/), Brazil'
     details: |
       Responsible for implementing and maintaining a scrum methodology during the development of Unreal Engine based games like [Pure Forge](https://store.steampowered.com/app/1060160/PureForge).
 
