--- a/_data/data.yml
+++ b/_data/data.yml
@@ -85,31 +85,31 @@ education:
 experiences:
   - role: Junior C# Developer
     time: SEP 2019 - PRESENT
-    company: '[HBSIS - AMBEV](https://hbsis.com.br/), Brazil'
+    company: "[HBSIS - AMBEV](https://hbsis.com.br/), Brazil"
     details: |
       Worked as a C# developer for [HBSIS - AMBEV](https://hbsis.com.br/), wich makes part of the largest brewer group in the word, [AB Inbev](https://www.ab-inbev.com/).
 
   - role: Scrum Master - Project Manager
     time: MAY 2019 - PRESENT
-    company: '[Vincae](https://vincae.com/), Brazil'
+    company: "[Vincae](https://vincae.com/), Brazil"
     details: |
       Responsible for implementing and maintaining a scrum methodology during the development of Unreal Engine based games like [Pure Forge](https://store.steampowered.com/app/1060160/PureForge).
 
   - role: Construction Designer
     time: JUN 2017 - SEP 2019
-    company: '[Construtora Hahne](http://hahne.com.br/), Brazil'
+    company: "[Construtora Hahne](http://hahne.com.br/), Brazil"
     details: |
       As an construction designer at the department of projects of this major Brazilian construction company, I was required to elaborate structural, sanitary and electrical projects based on BIM technology both for the residential and industrial markets.
 
   - role: Lab Monitor
     time: APR 2017 - JUN 2017
-    company: '[Universidade Regional de Blumenau - FURB](http://www.furb.br), Brazil'
+    company: "[Universidade Regional de Blumenau - FURB](http://www.furb.br), Brazil"
     details: |
       As a lab monitor at the university materials and soil laboratory, I was able to provide assistance to professors and students, on conducting normalized procedures and tests in civil engineering materials and in soil samples.
 
   - role: Research Assistant
     time: FEB 2016 - AUG 2016
-    company: '[Universidade de Santiago de Compostela - USC](http://www.usc.es/), Spain'
+    company: "[Universidade de Santiago de Compostela - USC](http://www.usc.es/), Spain"
     details: |
       At the hydraulics research lab, my main duties included the analysis and production of technical reports related to irrigation systems.
 
@@ -152,28 +152,19 @@ projects:
 #      conference: "Comm. ACM 4 (1961), 51–55"
 
 skills:
-  title: Skills &amp; Proficiency
+  title: Skills
 
   toolset:
-    - name: C#
+    - name: .Net
+      level: 85%
+
+    - name: Go
       level: 75%
 
-    - name: Javascript
-      level: 75%
-
-    - name: Google Apps Script
-      level: 60%
-
-    - name: HTML & CSS
-      level: 50%
-
-    - name: Git
-      level: 75%
-
-    - name: Bootstrap
+    - name: React
       level: 35%
 
-    - name: jQuery
-      level: 45%
+    - name: Automated Testing
+      level: 80%
 
 footer: >
